add customized cpp file

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -35,6 +35,13 @@ else()
     include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../src)
     include_directories(${CMAKE_CURRENT_BINARY_DIR}/../src)
 
+    ncnn_add_example(yolo_detection)
+    ncnn_add_example(alphapose)
+    ncnn_add_example(resnet18)
+    ncnn_add_example(mobilenet)
+    ncnn_add_example(handpose)
+    ncnn_add_example(mobilepose)
+    ncnn_add_example(shuffle)
     ncnn_add_example(squeezenet)
     ncnn_add_example(squeezenet_c_api)
     ncnn_add_example(fasterrcnn)
