add underwater st

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -35,21 +35,22 @@ else()
     include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../src)
     include_directories(${CMAKE_CURRENT_BINARY_DIR}/../src)
 
-    ncnn_add_example(yolo_detection)
-    ncnn_add_example(alphapose)
-    ncnn_add_example(resnet18)
-    ncnn_add_example(mobilenet)
-    ncnn_add_example(handpose)
-    ncnn_add_example(mobilepose)
-    ncnn_add_example(shuffle)
     ncnn_add_example(squeezenet)
     ncnn_add_example(squeezenet_c_api)
     ncnn_add_example(fasterrcnn)
     ncnn_add_example(rfcn)
     ncnn_add_example(yolov2)
+    ncnn_add_example(underwater_st)
     ncnn_add_example(yolov3)
     ncnn_add_example(yolov4)
     ncnn_add_example(yolov5)
+    ncnn_add_example(yolo_detection)
+    ncnn_add_example(resnet18_pose)
+    ncnn_add_example(CNN_shufflenet)
+    ncnn_add_example(CNN_resnet18)
+    ncnn_add_example(seresnet101_pose)
+    ncnn_add_example(mobile_pose)
+    ncnn_add_example(CNN_mobilenet)
     ncnn_add_example(mobilenetv2ssdlite)
     ncnn_add_example(mobilenetssd)
     ncnn_add_example(squeezenetssd)
@@ -58,5 +59,4 @@ else()
     ncnn_add_example(simplepose)
     ncnn_add_example(retinaface)
     ncnn_add_example(yolact)
-    ncnn_add_example(nanodet)
 endif()
