move the directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -229,6 +229,7 @@ if(NCNN_BUILD_BENCHMARK)
 endif()
 if(NCNN_BUILD_EXAMPLES)
     add_subdirectory(examples)
+    add_subdirectory(customized_examples)
 endif()
 if(NCNN_BUILD_TOOLS)
     add_subdirectory(tools)
