--- a/customized_examples/CMakeLists.txt
+++ b/customized_examples/CMakeLists.txt
@@ -4,7 +4,7 @@ macro(ncnn_add_example name)
     target_link_libraries(${name} PRIVATE ncnn ${OpenCV_LIBS})
 
     # add test to a virtual project group
-    set_property(TARGET ${name} PROPERTY FOLDER "examples")
+    set_property(TARGET ${name} PROPERTY FOLDER "customized_examples")
 endmacro()
 
 find_package(OpenCV QUIET COMPONENTS opencv_world)
@@ -35,19 +35,14 @@ else()
     include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../src)
     include_directories(${CMAKE_CURRENT_BINARY_DIR}/../src)
 
-    ncnn_add_example(squeezenet)
-    ncnn_add_example(squeezenet_c_api)
-    ncnn_add_example(fasterrcnn)
-    ncnn_add_example(rfcn)
-    ncnn_add_example(yolov2)
-    ncnn_add_example(yolov3)
-    ncnn_add_example(yolov4)
-    ncnn_add_example(yolov5)
-    ncnn_add_example(mobilenetv2ssdlite)
-    ncnn_add_example(mobilenetssd)
-    ncnn_add_example(squeezenetssd)
-    ncnn_add_example(shufflenetv2)
-    ncnn_add_example(peleenetssd_seg)
-    ncnn_add_example(retinaface)
-    ncnn_add_example(yolact)
+
+    ncnn_add_example(underwater_st)
+    ncnn_add_example(yolo_detection)
+    ncnn_add_example(mm_resnet18_pose)
+    ncnn_add_example(CNN_shufflenet)
+    ncnn_add_example(CNN_resnet18)
+    ncnn_add_example(CNN_mobilenet)
+    ncnn_add_example(seresnet101_pose)
+    ncnn_add_example(mobilepose)
+
 endif()
