--- a/customized_examples/CMakeLists.txt
+++ b/customized_examples/CMakeLists.txt
@@ -39,6 +39,7 @@ else()
     ncnn_add_example(underwater_st)
     ncnn_add_example(yolo_detection)
     ncnn_add_example(mm_resnet18_pose)
+    ncnn_add_example(pytorch_pose)
     ncnn_add_example(CNN_shufflenet)
     ncnn_add_example(CNN_resnet18)
     ncnn_add_example(CNN_mobilenet)
