add auto example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -230,6 +230,7 @@ endif()
 if(NCNN_BUILD_EXAMPLES)
     add_subdirectory(examples)
     add_subdirectory(customized_examples)
+    add_subdirectory(auto_examples)
 endif()
 if(NCNN_BUILD_TOOLS)
     add_subdirectory(tools)
